<?xml version="1.0" encoding="utf-8"?>

<!-- Макет для редактора -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Подпись текста элемента -->
        <TextView
            android:text="@string/element_text"
            style="@style/FieldStyle" />

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:paddingStart="4dp"
            android:orientation="vertical"
            tools:ignore="RtlSymmetry">

            <!-- Поле ввода для текста элемента -->
            <EditText
                android:id="@+id/edit_element_text"
                android:hint="@string/hint_element_text"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Подпись даты элемента -->
        <TextView
            android:text="@string/element_date"
            style="@style/FieldStyle" />

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:paddingStart="4dp"
            android:orientation="vertical"
            tools:ignore="RtlSymmetry">

            <!-- Поле ввода для текста элемента -->
            <EditText
                android:id="@+id/edit_element_date"
                android:inputType="date"
                android:hint="@string/hint_element_date"
                style="@style/EditorFieldStyle" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Подпись времени элемента -->
        <TextView
            android:text="@string/element_time"
            style="@style/FieldStyle" />

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:paddingStart="4dp"
            android:orientation="vertical"
            tools:ignore="RtlSymmetry">

            <!-- Поле ввода для времени элемента -->
            <EditText
                android:id="@+id/edit_element_time"
                android:hint="@string/hint_element_time"
                android:inputType="datetime"
                style="@style/EditorFieldStyle" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>